dinoco_docs/src/content/v0.0.2/ja-jp/orm/find-first.mdx
export const title = 'find_first';

# find_first

最大1つのレコードを検索するために使用されます。

---

## できること

- `.select::&lt;T&gt;()`: デフォルトのプロジェクションをカスタムプロジェクションに置き換えます。
- `.cond(...)`: 検索にフィルターを追加します。
- `.take(...)`: 考慮されるレコードの最大数を制限します。
- `.skip(...)`: 最初の結果を選択する前にレコードをスキップします。
- `.order_by(...)`: どのレコードを最初に考慮すべきかを定義します。
- `.includes(...)`: メインアイテムと一緒にリレーションをロードします。
- `.count(...)`: プロジェクション内のリレーションのカウンターを計算します。
- `.cache(...)`: まずRedisから検索を試み、キーが存在しない場合にのみデータベースをクエリします。キャッシュヒットの場合、クエリロガーは `CACHE HIT key=...` を記録します。
- `.cache_with_expiration(...)`: 同じフローを実行しますが、TTLを秒単位で保存します。
- `.read_in_primary()`: プライマリデータベースからの読み取りを強制します。
- `.execute(&client)`: クエリを実行し、最大1つのアイテムを返します。

## 戻り値

`select::&lt;T&gt;()` がない場合、戻り値は次のようになります。

```rust
DinocoResult<Option<M>>
```

`select::&lt;T&gt;()` がある場合、戻り値は次のようになります。

```rust
DinocoResult<Option<T>>
```

## 基本的な例

```rust
let user = dinoco::find_first::<User>()
    .cond(|w| w.id.eq(10))
    .execute(&client)
    .await?;
```

## select を使用した例

```rust
#[derive(Debug, Clone, dinoco::Extend)]
#[extend(User)]
struct UserSummary {
    id: i64,
    name: String,
}

let user = dinoco::find_first::<User>()
    .select::<UserSummary>()
    .cond(|w| w.id.eq(1_i64))
    .execute(&client)
    .await?;
```

## リレーションを使用した例

```rust
#[derive(Debug, Clone, dinoco::Extend)]
#[extend(User)]
struct UserWithPosts {
    id: i64,
    name: String,
    posts: Vec<Post>,
}

let user = dinoco::find_first::<User>()
    .select::<UserWithPosts>()
    .cond(|x| x.id.eq(1_i64))
    .includes(|x| x.posts())
    .execute(&client)
    .await?;
```

## ソートを使用した例

```rust
let latest_user = dinoco::find_first::<User>()
    .order_by(|x| x.id.desc())
    .execute(&client)
    .await?;
```

## ワーカーを使用した例

```rust
use database::*;

let _worker = workers()
    .on::<User, _, _>("user.first-read", |job| async move {
        println!("最初のユーザーが読み込まれました: {}", job.data.name); // 最初のユーザーが読み込まれました
        job.success();
    })
    .run()
    .await?;

let user = dinoco::find_first::<User>()
    .order_by(|x| x.id.desc())
    .enqueue("user.first-read")
    .execute(&client)
    .await?;
```

ワーカーの詳細については、[**`queues`**](/v0.0.2/orm/queues) を参照してください。

## キャッシュを使用した例

このメソッドは、スキーマに `redis` が設定されている場合にのみ存在します。

```rust
use database::*;

let user = dinoco::find_first::<User>()
    .cond(|x| x.id.eq(1_i64))
    .cache("users:1")
    .execute(&client)
    .await?;
```

## キャッシュを使用した例

このメソッドは、スキーマに `redis` が設定されている場合にのみ存在します。

```rust
use database::*;

let user = dinoco::find_first::<User>()
    .cond(|x| x.id.eq(1_i64))
    .cache_with_expiration("users:1")
    .execute(&client)
    .await?;
```

## 次のステップ

- [**`find_many::&lt;M&gt;()`**](/v0.0.2/orm/find-many): 複数のレコードを検索します。
- [**`count::&lt;M&gt;()`**](/v0.0.2/orm/count): レコードの数を数えます。
